<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtCurp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/curp"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/edtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/nombre"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/edtApellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/apellido"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/edtDomicilio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/domicilio"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/edtIngresos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/ingresos"
                android:inputType="number|numberDecimal" />

            <TextView
                android:id="@+id/txtTipoTarjeta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/tipo_tarjeta"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spnTipoTarjeta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal"
                android:paddingBottom="40dp">

                <Button
                    android:id="@+id/btnRegistrar"
                    android:layout_width="181dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:onClick="verificarDatos"
                    android:text="@string/registrar" />

                <Button
                    android:id="@+id/btnLimpiar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:onClick="limpiarRegistro"
                    android:text="@string/limpiar" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>